* 2014-08-13 - martin.herfurth@open-xchange.com

 - Fix for bug 34023: Default display message for category user input.

* 2014-08-13 - tobias.friedrich@open-xchange.com

 - Fix for bug 34014: Adjusted example configuration to match corresponding comments 

* 2014-08-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34006: Corrected hashCode() calculation for contacts 

* 2014-08-08 - jan.bauerdick@open-xchange.com

 - Fix for bug 33818: Added update task to check foreign keys and drop them if necessary

* 2014-08-08 - thorben.betten@open-xchange.com

 - Fix for bug 33899: Added missing project dependencies to "com.openexchange.report.client" classpath
 - Fix for bug 33772: Added <strike> tag to whitelist.properties file
 - Fix for bug 33941: Added appropriate entries for password settings to "paths.perfMap" file
 - Fix for bug 33044: Properly decode (encoded and folded) Subject header

* 2014-08-08 - martin.herfurth@open-xchange.com

 - Fix for bug 30599: Ical export stumbles over bad reccurring appointment.

* 2014-08-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 33920: Introduced update task to ensure required indices on 'prg_dates' exist
 - Fix for bug 33898: Added basic decomposition of display- to first- and lastname for collected contacts
 - Fix for bug 33897: Added basic decomposition of display- to first- and lastname for halo contact investigations

* 2014-08-06 - steffen.templin@open-xchange.com

 - Fix for bug 33918: Translate display names of subscription sources only if necessary

* 2014-08-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 33921: Don't cache filestore references in image preview cache
 - Fix for bug 33914: Corrected parameter index when dropping the +/- variants of user capabilities

* 2014-08-05 - lars.hoogestraat@open-xchange.com

 - Fix for bug 33869: Added missing description in CLT for quota module 'attachment'.

* 2014-08-04 - marcus.klein@open-xchange.com
